--- a/app/views/subscriptions/index.html.erb
+++ b/app/views/subscriptions/index.html.erb
@@ -5,7 +5,7 @@
     <div class="card mt-5">
       <% @subscriptions.each do |subscription| %>
         <div class="card-body">
-          <h5 class="card-title"> <%=subscription.plan  %> </h5>
+          <h5 class="card-title"> <%=subscription.plan_type  %> </h5>
           <p class="card-text"> <%= subscription.price %> </p>
           <a href="/orders/new?subscription=<%= subscription.id %>" class="btn btn-primary"><strong>30 Tage</strong> kostenlos testen</a>
 
