--- a/app/views/orders/new.html.erb
+++ b/app/views/orders/new.html.erb
@@ -4,14 +4,11 @@
       <h3 class= "mb-4">Noch ein letzter Schritt...</h3>
       <div class="bg-white rounded p-3 mt-3 mb-3">
         <%= simple_form_for @order do |f| %>
-          <%= f.input :subscription, as: :hidden, input_html: { value: @subscription } %>
+          <%= f.input :subscription, as: :hidden, input_html: { value: @subscription.id } %>
           <h4>Klassische Zahlweise</h4>
           <h5>Nennen Sie uns Ihre Kontaktinformationen</h5>
           <br>
 
-          <pre> 
-          <%= @order.payment_type.to_json %>
-          </pre>
           <%= f.simple_fields_for :payment_type do |p| %>
             <%= p.input :payment_type, as: :radio_buttons, boolean_style: :inline, collection: [['Kreditkarte', :credit_card], ['Lastschrift', :lastschrift]], input_html: { onchange: "payment_type_click_handler(event)" }  %>
 
@@ -44,10 +41,60 @@
           
 
           <%= f.button :button, "Jetzt kaufen", class: "btn btn-primary mt-3 mb-3 p-2 align-center" %>
+          <h3>Bestellungszusammenfassung:</h3>
+          <div class= "bg-success p-2">Heute fällig: 0,00 €</div>
+          <div class= "mt-3 mb-3 ml-2">Am <%= (Date.today + 1.month).strftime("%e. %B") %> fällig:</div>
+
+          <ul class="nav nav-tabs" id="myTab" role="tablist">
+            <li class="nav-item" role="presentation">
+              <a class="nav-link active" id="vorauszahlung-tab" data-toggle="tab" href="#vorauszahlung" role="tab" aria-controls="vorauszahlung" aria-selected="true">Vorauszahlung</a>
+            </li>
+            <li class="nav-item" role="presentation">
+              <a class="nav-link" id="monatszahlung-tab" data-toggle="tab" href="#monatszahlung" role="tab" aria-controls="monatszahlung" aria-selected="false">Monatszahlung</a>
+            </li>
+            <input type="hidden" name="subscription[choice_of_payment]" value="vorauszahlung">
+          </ul>
+          <div class="tab-content" id="myTabContent">
+            <div class="tab-pane fade show active" id="vorauszahlung" role="tabpanel" aria-labelledby="vorauszahlung-tab">
+              <% @vorauszahlung_options.each_with_index do |s, i| %>
+                <div class="container">
+                  <div class="row">
+                    <div class="col-sm">
+                      <!-- if subscription coming from query parameter (URL) is the one we are rendering now, mark it as checked --->
+                      <input type="radio" name="subscription[vorauszahlung]" value="<%= s.id %>" <%= i == 0 ?  "checked" : "" %> >
+                      <%= s.duration_in_months %> Monate
+                    </div>
+                    <div class="col-sm">
+                      im Monat <%= s.price %> €
+                    </div>
+                  </div>
+                </div>
+                <p>Als Vorauszahlung von <%= s.total_price %>€ für <%= s.duration_in_months %> Monate</p>
+              <% end %>
+          </div>
+          <div class="tab-pane fade" id="monatszahlung" role="tabpanel" aria-labelledby="monatszahlung-tab">
+            <% @monatszahlung_options.each_with_index do |s, i| %>
+                <div class="container">
+                  <div class="row">
+                    <div class="col-sm">
+                      <input type="radio" name="subscription[monatszahlung]" value="<%= s.id %>" <%= i == 0 ?  "checked" : "" %>>
+                      <%= s.duration_in_months %> Monate
+                    </div>
+                    <div class="col-sm">
+                      im Monat <%= s.price %> €
+                    </div>
+                  </div>
+                </div>
+                <p>
+                  <%= s.duration_in_months %> monatliche Zahlungen i. H. von <%= s.price %> €.
+Insgesamt <%= s.total_price %> €
+               </p>
+              <% end %>
+          </div>
+        </div>
         <% end %>
-        <h3>Bestellungszusammenfassung:</h3>
-        <button>Heute fällig: <%= @order.subscription.price %>  </button>
       </div>
+
     </div>
   </div>
 </div>
